Issue 53153: support "RowId" as value for "AliquotedFrom"