@@ -44,6 +44,7 @@ import org.labkey.api.data.JdbcType;
 import org.labkey.api.data.MultiValuedForeignKey;
 import org.labkey.api.data.NameGenerator;
 import org.labkey.api.data.NameGeneratorState;
+import org.labkey.api.data.RemapCache;
 import org.labkey.api.data.RuntimeSQLException;
 import org.labkey.api.data.SimpleFilter;
 import org.labkey.api.data.Table;
@@ -133,6 +134,7 @@ import static org.labkey.api.data.TableSelector.ALL_COLUMNS;
 import static org.labkey.api.dataiterator.DetailedAuditLogDataIterator.AuditConfigs;
 import static org.labkey.api.dataiterator.SampleUpdateAddColumnsDataIterator.CURRENT_SAMPLE_STATUS_COLUMN_NAME;
 import static org.labkey.api.exp.api.ExpRunItem.PARENT_IMPORT_ALIAS_MAP_PROP;
+import static org.labkey.api.exp.api.ExperimentService.QueryOptions.SkipBulkRemapCache;
 import static org.labkey.api.exp.api.SampleTypeDomainKind.ALIQUOT_ROLLUP_FIELD_LABELS;
 import static org.labkey.api.exp.api.SampleTypeService.ConfigParameters.SkipAliquotRollup;
 import static org.labkey.api.exp.api.SampleTypeService.ConfigParameters.SkipMaxSampleCounterFunction;
@@ -1506,7 +1508,7 @@ public class SampleTypeUpdateServiceDI extends DefaultQueryUpdateService
             DataIterator c = LoggingDataIterator.wrap(new _SamplesCoerceDataIterator(source, context, sampleType, materialTable));
             context.setWithLookupRemapping(false);
             SimpleTranslator addColumns = new SimpleTranslator(c, context);
-            addColumns.setDebugName("add genId and other requried columns");
+            addColumns.setDebugName("add genId and other required columns");
             Set<String> idColNames = Sets.newCaseInsensitiveHashSet("genId");
             materialTable.getColumns().stream().filter(ColumnInfo::isUniqueIdField).forEach(columnInfo -> idColNames.add(columnInfo.getName()));
             addColumns.selectAll(idColNames);
@@ -1531,14 +1533,7 @@ public class SampleTypeUpdateServiceDI extends DefaultQueryUpdateService
 
             // sampleset.createSampleNames() + generate lsid
             // TODO: does not handle insertIgnore
-            DataIterator names = new _GenerateNamesDataIterator(sampleType, container, user, DataIteratorUtil.wrapMap(dataIterator, false), context, batchSize)
-                    .setAllowUserSpecifiedNames(NameExpressionOptionService.get().getAllowUserSpecificNamesValue(container))
-                    .addExtraPropsFn(() -> {
-                        if (container != null)
-                            return Map.of(NameExpressionOptionService.FOLDER_PREFIX_TOKEN, StringUtils.trimToEmpty(NameExpressionOptionService.get().getExpressionPrefix(container)));
-                        else
-                            return Collections.emptyMap();
-                    });
+            DataIterator names = new _GenerateNamesDataIterator(sampleType, container, user, DataIteratorUtil.wrapMap(dataIterator, false), context, batchSize);
 
             return LoggingDataIterator.wrap(names);
         }
@@ -1613,74 +1608,67 @@ public class SampleTypeUpdateServiceDI extends DefaultQueryUpdateService
 
     static class _GenerateNamesDataIterator extends SimpleTranslator
     {
-        final ExpSampleTypeImpl sampleType;
-        final SampleNameGeneratorState nameState;
+        final boolean _allowUserSpecifiedNames;        // whether manual names specification is allowed or only name expression generation
+        final int _batchSize;
+        final RemapCache _cache;
+        final Container _container;
+        final List<Supplier<Map<String, Object>>> _extraPropsFns;
+        final Map<Integer, ExpMaterial> _materialCache;
+        final SampleNameGeneratorState _nameState;
         final Lsid.LsidBuilder lsidBuilder;
         final DbSequence _lsidDbSeq;
-        final Container _container;
-        final int _batchSize;
-        boolean first = true;
-        Map<String, String> importAliasMap = null;
-        boolean _allowUserSpecifiedNames = true;        // whether manual names specification is allowed or only name expression generation
-        Set<String> _existingNames = null;
-        List<Supplier<Map<String, Object>>> _extraPropsFns = new ArrayList<>();
+        final ExpSampleTypeImpl _sampleType;
+        final User _user;
 
+        Set<String> _existingNames = null;
         String generatedName = null;
 
-        _GenerateNamesDataIterator(ExpSampleTypeImpl sampleType, Container dataContainer, User user, MapDataIterator source, DataIteratorContext context, int batchSize)
+        _GenerateNamesDataIterator(ExpSampleTypeImpl sampleType, Container container, User user, MapDataIterator source, DataIteratorContext context, int batchSize)
         {
             super(source, context);
-            this.sampleType = sampleType;
+            _allowUserSpecifiedNames = NameExpressionOptionService.get().getAllowUserSpecificNamesValue(container);
+            _cache = new RemapCache(!context.getConfigParameterBoolean(SkipBulkRemapCache));
+            _container = container;
+            _extraPropsFns = new ArrayList<>();
+            _materialCache = new HashMap<>();
+            _sampleType = sampleType;
+            _user = user;
+
             try
             {
-                this.importAliasMap = sampleType.getImportAliases();
-                _extraPropsFns.add(() -> {
-                    if (this.importAliasMap != null)
-                        return Map.of(PARENT_IMPORT_ALIAS_MAP_PROP, this.importAliasMap);
-                    else
-                        return Collections.emptyMap();
-                });
+                Map<String, String> importAliasMap = sampleType.getImportAliases();
+                _extraPropsFns.add(() -> Map.of(PARENT_IMPORT_ALIAS_MAP_PROP, importAliasMap));
             }
             catch (IOException e)
             {
                 // do nothing
             }
+
+            _extraPropsFns.add(() -> {
+                if (_container == null)
+                    return Collections.emptyMap();
+                return Map.of(NameExpressionOptionService.FOLDER_PREFIX_TOKEN, StringUtils.trimToEmpty(NameExpressionOptionService.get().getExpressionPrefix(_container)));
+            });
+
             boolean skipDuplicateCheck = context.getConfigParameterBoolean(SkipMaxSampleCounterFunction);
-            nameState = sampleType.getNameGenState(skipDuplicateCheck, true, dataContainer, user);
+            _nameState = sampleType.getNameGenState(skipDuplicateCheck, true, _container, user);
             lsidBuilder = sampleType.generateSampleLSID();
-            _container = sampleType.getContainer();
             _batchSize = batchSize;
 
-            if (context.getConfigParameterBoolean(ExperimentService.QueryOptions.UseLsidForUpdate))
+            boolean useLsidForUpdate = context.getConfigParameterBoolean(ExperimentService.QueryOptions.UseLsidForUpdate);
+            if (useLsidForUpdate)
                 selectAll(CaseInsensitiveHashSet.of(Name.name(), RootMaterialRowId.name()));
             else
                 selectAll(CaseInsensitiveHashSet.of(Name.name(), LSID.name(), RootMaterialRowId.name()));
 
-            _lsidDbSeq = sampleType.getSampleLsidDbSeq(_batchSize, _container);
+            _lsidDbSeq = sampleType.getSampleLsidDbSeq(_batchSize, sampleType.getContainer());
 
-            addColumn(new BaseColumnInfo("name", JdbcType.VARCHAR), (Supplier)() -> generatedName);
-            if (!context.getConfigParameterBoolean(ExperimentService.QueryOptions.UseLsidForUpdate))
-                addColumn(new BaseColumnInfo("lsid", JdbcType.VARCHAR), (Supplier)() -> lsidBuilder.setObjectId(String.valueOf(_lsidDbSeq.next())).toString());
+            addColumn(new BaseColumnInfo("name", JdbcType.VARCHAR), (Supplier<String>)() -> generatedName);
+            if (!useLsidForUpdate)
+                addColumn(new BaseColumnInfo("lsid", JdbcType.VARCHAR), (Supplier<String>)() -> lsidBuilder.setObjectId(String.valueOf(_lsidDbSeq.next())).toString());
             // Ensure we have a cpasType column and it is of the right value
             addColumn(new BaseColumnInfo("cpasType", JdbcType.VARCHAR), new SimpleTranslator.ConstantColumn(sampleType.getLSID()));
             addColumn(new BaseColumnInfo("materialSourceId", JdbcType.INTEGER), new SimpleTranslator.ConstantColumn(sampleType.getRowId()));
-        }
-
-        _GenerateNamesDataIterator setAllowUserSpecifiedNames(boolean allowUserSpecifiedNames)
-        {
-            _allowUserSpecifiedNames = allowUserSpecifiedNames;
-            return this;
-        }
-
-        _GenerateNamesDataIterator addExtraPropsFn(Supplier<Map<String, Object>> extraProps)
-        {
-            _extraPropsFns.add(extraProps);
-            return this;
-        }
-
-        void onFirst()
-        {
-            first = false;
         }
 
         @Override
@@ -1726,7 +1714,7 @@ public class SampleTypeUpdateServiceDI extends DefaultQueryUpdateService
                     }
                 }
 
-                generatedName = nameState.nextName(map, _extraPropsFns);
+                generatedName = _nameState.nextName(map, _extraPropsFns);
             }
 
             catch (NameGenerator.DuplicateNameException dup)
@@ -1738,13 +1726,13 @@ public class SampleTypeUpdateServiceDI extends DefaultQueryUpdateService
                 // Failed to generate a name due to some part of the expression not in the row
                 if (isAliquot)
                 {
-                    addRowError("Failed to generate name for aliquot on row " + e.getRowNumber() + " using aliquot naming pattern " + sampleType.getAliquotNameExpression() + ". Check the syntax of the aliquot naming pattern and the data values for the aliquot.");
+                    addRowError("Failed to generate name for aliquot on row " + e.getRowNumber() + " using aliquot naming pattern " + _sampleType.getAliquotNameExpression() + ". Check the syntax of the aliquot naming pattern and the data values for the aliquot.");
                 }
                 else
                 {
-                    if (sampleType.hasNameExpression())
-                        addRowError("Failed to generate name for sample on row " + e.getRowNumber() + " using naming pattern " + sampleType.getNameExpression() + ". Check the syntax of the naming pattern and the data values for the sample.");
-                    else if (sampleType.hasNameAsIdCol())
+                    if (_sampleType.hasNameExpression())
+                        addRowError("Failed to generate name for sample on row " + e.getRowNumber() + " using naming pattern " + _sampleType.getNameExpression() + ". Check the syntax of the naming pattern and the data values for the sample.");
+                    else if (_sampleType.hasNameAsIdCol())
                         addRowError("SampleID or Name is required for sample on row " + e.getRowNumber());
                     else
                         addRowError("All id columns are required for sample on row " + e.getRowNumber());
@@ -1755,16 +1743,12 @@ public class SampleTypeUpdateServiceDI extends DefaultQueryUpdateService
         @Override
         public boolean next() throws BatchValidationException
         {
-            // consider add onFirst() as callback from SimpleTranslator
-            if (first)
-                onFirst();
-
             // calls processNextInput()
             boolean next = super.next();
             if (!next)
             {
-                if (null != nameState)
-                    nameState.cleanUp();
+                if (null != _nameState)
+                    _nameState.cleanUp();
             }
             return next;
         }
@@ -1773,8 +1757,8 @@ public class SampleTypeUpdateServiceDI extends DefaultQueryUpdateService
         public void close() throws IOException
         {
             super.close();
-            if (null != nameState)
-                nameState.close();
+            if (null != _nameState)
+                _nameState.close();
         }
 
         private boolean rowExists(String name)
@@ -1782,8 +1766,8 @@ public class SampleTypeUpdateServiceDI extends DefaultQueryUpdateService
             if (_existingNames == null)
             {
                 _existingNames = new HashSet<>();
-                SamplesSchema schema = new SamplesSchema(User.getSearchUser(), _container);
-                TableSelector ts = new TableSelector(schema.getTable(sampleType, null), Collections.singleton("Name")).setMaxRows(1_000_000);
+                SamplesSchema schema = new SamplesSchema(User.getSearchUser(), _sampleType.getContainer());
+                TableSelector ts = new TableSelector(schema.getTable(_sampleType, null), Collections.singleton("Name")).setMaxRows(1_000_000);
                 ts.fillSet(_existingNames);
             }
             return _existingNames.contains(name);
@@ -2002,11 +1986,13 @@ public class SampleTypeUpdateServiceDI extends DefaultQueryUpdateService
     public static class SampleNameGeneratorState extends NameGeneratorState
     {
         private final NameGenerator aliquotNameGenerator;
+        private final ExpSampleTypeImpl sampleType;
 
-        public SampleNameGeneratorState(@NotNull NameGenerator nameGenerator, boolean incrementSampleCounts, @Nullable NameGenerator aliquotNameGenerator)
+        public SampleNameGeneratorState(@NotNull ExpSampleTypeImpl sampleType, @NotNull NameGenerator nameGenerator, boolean incrementSampleCounts, @Nullable NameGenerator aliquotNameGenerator)
         {
             super(nameGenerator, incrementSampleCounts, nameGenerator.getExpressionSummary() == null ? null : nameGenerator.getExpressionSummary().sampleSummary());
             this.aliquotNameGenerator = aliquotNameGenerator;
+            this.sampleType = sampleType;
         }
 
         public String nextName(Map<String, Object> map, @Nullable List<Supplier<Map<String, Object>>> _extraPropsFns) throws NameGenerator.NameGenerationException
@@ -2019,23 +2005,7 @@ public class SampleTypeUpdateServiceDI extends DefaultQueryUpdateService
                                @Nullable Set<ExpMaterial> parentSamples,
                                @Nullable List<Supplier<Map<String, Object>>> _extraPropsFns) throws NameGenerator.NameGenerationException
         {
-            String aliquotedFrom = null;
-            Object aliquotedFromObj = map.get(ExpMaterial.ALIQUOTED_FROM_INPUT);
-            if (aliquotedFromObj != null)
-            {
-                if (aliquotedFromObj instanceof String)
-                {
-                    // Issue 45563: We need the AliquotedFrom name to be quoted so we can properly find the parent,
-                    // but we don't want to include the quotes in the name we generate using AliquotedFrom
-                    aliquotedFrom = StringUtilsLabKey.unquoteString((String) aliquotedFromObj).trim();
-                    map.put(ExpMaterial.ALIQUOTED_FROM_INPUT, aliquotedFrom);
-                }
-                else if (aliquotedFromObj instanceof Number)
-                {
-                    aliquotedFrom = aliquotedFromObj.toString();
-                }
-            }
-
+            String aliquotedFrom = resolveAliquotParentName(map);
             boolean isAliquot = !StringUtils.isEmpty(aliquotedFrom);
 
             String generatedName = null;
@@ -2045,6 +2015,50 @@ public class SampleTypeUpdateServiceDI extends DefaultQueryUpdateService
                 generatedName = nextName(map, parentDatas, parentSamples, _extraPropsFns, null);
 
             return generatedName;
+        }
+
+        private @Nullable ExpMaterial findAliquotParent(Object sampleIdentifier) throws NameGenerator.NameGenerationException
+        {
+            try
+            {
+                return ExperimentService.get().findExpMaterial(_container, _user, sampleIdentifier, sampleType, renameCache, materialCache);
+            }
+            catch (ValidationException e)
+            {
+                throw new NameGenerator.NameGenerationException(_rowNumber, e);
+            }
+        }
+
+        private @Nullable String resolveAliquotParentName(Map<String, Object> map) throws NameGenerator.NameGenerationException
+        {
+            Object aliquotedFromObj = map.get(ExpMaterial.ALIQUOTED_FROM_INPUT);
+            if (aliquotedFromObj == null)
+                return null;
+
+            String aliquotedFrom = null;
+
+            if (aliquotedFromObj instanceof String aliquotStr)
+            {
+                // Issue 45563: Unquote and trim the string to find the parent properly
+                aliquotedFrom = StringUtilsLabKey.unquoteString(aliquotStr).trim();
+            }
+            else if (aliquotedFromObj instanceof Number)
+            {
+                // Issue 53153: support "RowId" as value for "AliquotedFrom"
+                ExpMaterial aliquotParent = findAliquotParent(aliquotedFromObj);
+
+                if (aliquotParent != null)
+                {
+                    aliquotedFrom = aliquotParent.getName();
+                    map.put(ExpMaterial.ALIQUOTED_FROM_INPUT, aliquotedFrom);
+                }
+                else
+                {
+                    aliquotedFrom = aliquotedFromObj.toString();
+                }
+            }
+
+            return aliquotedFrom;
         }
     }
 }
